--- a/css/myvip.css
+++ b/css/myvip.css
@@ -6,13 +6,14 @@
     width: 100%;
     /*height: 14.1rem;*/
     background: #FAFAFA;
+    padding-top: .6rem;
 }
 .tips{
     color: #333;
     font-size: .6rem;
     height: .85rem;
     line-height: .85rem;
-    margin: .6rem .75rem .4rem;
+    margin: 0 .75rem .4rem;
 }
 .tips span{
     display: inline-block;
